--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     text-align: center;
     overflow-x: hidden;
-    background-color: pink;
+    background-color: #f8c8dc;
 }
 
 div{
